--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ python-dateutil==2.4.2
 python-mimeparse==0.1.4
 schema==0.3.1
 simplejson==3.8.0
+six==1.9.0
 SQLAlchemy==1.0.8
 Werkzeug==0.10.4
 wheel==0.24.0
