--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "historic_events"]
 	path = historic_events
-	url = git@github.com:tuvalie/historic_events.git
+	url = git@github.com:eugene-eeo/historic_events.git
